FullQa New/src/objects/Journey_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journey Participants</relationshipLabel>
        <relationshipName>Journey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Role__c</fullName>
        <label>Deal Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Do&apos;er</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hot_Buttons_Impact_Note__c</fullName>
        <label>Hot Buttons &amp; Impact Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JX_Data_Feed__c</fullName>
        <label>JX Data Feed</label>
        <referenceTo>JX_Data_Feed__c</referenceTo>
        <relationshipLabel>Journey Participants</relationshipLabel>
        <relationshipName>Journey_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Event_Attendance__c</fullName>
        <label>Sales Event Attendance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Intro Call</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Role__c</fullName>
        <label>Tax Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Journey Participant</label>
    <nameField>
        <displayFormat>jp{0000}</displayFormat>
        <label>Journey Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>